Fixed bottom padding of wrap

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -42,7 +42,7 @@ html {
     left: 0;
     right: 0;
     padding-top: 68px;
-    padding-bottom: 137px;
+    padding-bottom: 144px;
 }
 
 #top {
